--- a/hof/unfold-functions.rdl
+++ b/hof/unfold-functions.rdl
@@ -1,3 +1,3 @@
-define(unfold,(any*,(any*),(any*)),any*),
+define(unfold,(any*,(any*),(any*),(any*)),any*),
 define(unfold,(any*,(any*),(any*),(any*),(any*),(any*)),any*)
 define(unfold,(any*,(any*),(any*),(any*),(any*),(any*),any*),any*)
