--- a/core.rdl
+++ b/core.rdl
@@ -2,5 +2,5 @@ use(core/aggregate-functions),
 use(core/higher-order-functions),
 use(core/numeric-functions),
 use(core/string-assembly-functions),
-use(core/string-regex),
-use(core/string-value)
+use(core/string-regex-functions),
+use(core/string-value-functions)
