added 3 argument version

--- a/hof/unfold-functions.rdl
+++ b/hof/unfold-functions.rdl
@@ -1,3 +1,4 @@
+define(unfold,(any*,(any*),(any*)),any*),
 define(unfold,(any*,(any*),(any*),(any*)),any*),
 define(unfold,(any*,(any*),(any*),(any*),(any*),(any*)),any*)
 define(unfold,(any*,(any*),(any*),(any*),(any*),(any*),any*),any*)
