--- a/core/higher-order-functions.rdl
+++ b/core/higher-order-functions.rdl
@@ -1,2 +1,2 @@
-define(for-each,(any*,function((any*),any*)),any*),
-define(fold-left,(any*,any*,function((any*,any*),any*)),any*)
+define(for-each,(any*,((any*),any*)),any*),
+define(fold-left,(any*,any*,((any*,any*),any*)),any*)
