added by-id function

--- a/dom/dom-functions.rdl
+++ b/dom/dom-functions.rdl
@@ -1,3 +1,4 @@
+define(by-id,(string),element),
 define(element,(string,map),element),
 define(attribute,(string,map),attribute),
 define(query,(string),element*),
