--- a/fn.rdl
+++ b/fn.rdl
@@ -1,3 +1,4 @@
+module(fn,http://www.w3.org/2005/xpath-functions,core),
 use(fn/aggregate-functions),
 use(fn/higher-order-functions),
 use(fn/numeric-functions),
