everything in 1 file

--- a/fn/aggregate-functions.rdl
+++ b/fn/aggregate-functions.rdl
@@ -1,5 +1,23 @@
-define(count,(any*),number),
-define(avg,(any*),any),
-define(max,(any*),any),
-define(min,(any*),any),
-define(sum,(any*),any)
+core:define($,fn:count,(),(core:item($,1)*),core:integer());
+
+core:define($,fn:avg,(),(core:item($,1)*),core:item()?);
+
+core:define($,fn:max,(),(core:item($,1)*),core:item()?);
+
+core:define($,fn:min,(),(core:item($,1)*),core:item()?);
+
+core:define($,fn:sum,(),(core:item($,1)*),core:item());
+
+core:define($,fn:doc,(core:string($,1)?),core:element()?);
+
+core:define($,fn:collection,(core:string($,1)?),core:element()*);
+
+core:define($,fn:for-each,(core:item($,1),core:function($,2,(core:item()),core:item()*)),core:item()*);
+
+core:define($,fn:filter,(core:item($,1),core:function($,2,(core:item()),core:item()*)),core:item()*);
+
+core:define($,fn:fold-left,(core:item($,1),core:item($,2),core:function($,3,(core:item()*,core:item()),core:item()*)),core:item()*);
+
+core:define($,fn:fold-right,(core:item($,1),core:item($,2),core:function($,3,(core:item()*,core:item()),core:item()*)),core:item()*);
+
+core:define($,fn:sort,(core:item($,1),core:function($,2,(core:item()),core:item()*)),core:item()*);
